<resources>
    <string name="app_name">Spinner Bicycles</string>
    <string name="ADD">ADD A BICYCLE</string>
    <string name="SPIN">BIKES AT SPINNER</string>
    <string name="UPDATE">SPINNER BICYCLE REVIEW</string>
    <string name="DELETE">DELETE BICYCLE ADDITION</string>
    <string name="UPGRADE">UPGRADE YOUR BICYCLE</string>
    <string name="Bike_123">FirstBicycle</string>
    <string name="id123">Enter Bicycle ID:</string>
    <string name="ids">Enter Bicycle Name:</string>
    <string name="bike">bike</string>
    <string name="string_bike">bike12345</string>
    <string name="string_string_bike" />
    <string name="view_bicycle_details">VIEW BICYCLE DETAILS</string>
    <string name="bike1image">bike1image</string>
    <string name="click">Click On Image To View Details</string>
    <string name="biking">biking</string>
    <string name="image_a">imageA</string>
    <string name="text_ID1">Enter Bicycle ID:</string>
    <string name="text_ID2">Enter Bicycle Name:</string>
    <string name="text_ID3">Enter Bicycle Brand:</string>
    <string name="text_ID4">Enter Date Of Manufacture:</string>
    <string name="text_1">XYZXYZXYZ</string>
    <string name="TEXT_2">XLR8</string>
    <string name="text_3">TOMAHAWK</string>
    <string name="text_4">12.02.1999</string>
    <string name="text_7"><![CDATA[Agree To Privacy Policy & Terms]]></string>
    <string name="butt_01">SUBMIT</string>
    <string name="name_bike">TOMAHAWK XLR8</string>
    <string name="rating_id">BIKE RATING:</string>
    <string name="rat_value">70%</string>
    <string name="app_value">BIKER APPROVAL RATING:</string>
    <string name="app_values_count">20%</string>
    <string name="txt_ID">Give Us Your Bike Rating</string>
    <string name="butt_02">SUBMIT</string>
    <string name="rat_id_123">Give Us Your Bike Approval</string>
    <string name="motor">motor</string>
    <string name="info_1">Bicycle ID: XYZYXZ</string>
    <string name="bike_info2">Bicycle Name: Giant RX</string>
    <string name="bik_bra">Bicycle Brand: BMX</string>
    <string name="bik_or">Country Of Origin: Japan</string>
    <string name="bik_man">Manufacture Date: 12.08.2001</string>
    <string name="top_1">Bicycle Information</string>
    <string name="textview123">Our Bicycle Collection</string>
    <string name="txt_01">Our Bicycle Collection</string>
    <string name="but_01">Inspect</string>
    <string name="letsride">letsride</string>
    <string name="img">img</string>
    <string name="review_01">Spinner Bicycle Review</string>
    <string name="cat_text02">Enter The Bicycle ID</string>
    <string name="id_num_review">XYZYYXXZ</string>
    <string name="delete">Do You Want To Remove Your Bicycle Addition ?</string>
    <string name="checkbox">Yes!!!</string>
    <string name="plz_001">Enter The Bicycle ID:</string>
    <string name="bike_ID">XYXYXZ</string>
    <string name="upgrades_1">Bicycle Upgrades At Spinner</string>
    <string name="symbol">symbol</string>
    <string name="prefe_rences">Select Your Upgrades</string>
    <string name="g_1">Gears</string>
    <string name="radio_1">Equip</string>
    <string name="up_2">Dropper SeatPost</string>
    <string name="txt_tyre">Tubeless Conversion</string>
    <string name="image_vvv">image_vvv</string>
    <string name="ok_button_id">OK</string>
</resources>