<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/My_Info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bike_Info">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="367dp"
        android:layout_height="705dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="75dp"
            android:layout_marginRight="75dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/info_1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView12"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/bike_info2"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/bik_bra"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/bik_or"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="75dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/bik_man"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="285dp"
            android:layout_height="41dp"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/top_1"
            android:textColor="@color/blue_100"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            app:srcCompat="@drawable/_357590" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/ok_button_id"
            android:textSize="24sp"
            android:textStyle="bold"
            android:background="#000B32"
            android:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>